tests/negative/test_decl_bad_id.orb
fnc main() {
    let i32 x = 100;
    let u64 ret = 200;
}